# llama.cpp-1-bit-turbo

./: .gitignore  .gitignore_patch  AGENTS.md  CHANGELOG.md  CHANGELOG.md.rej  CLAUDE.md  CMakeLists.txt  CODEOWNERS  README.md  README.md.rej  commit_message.txt  commit_msg.txt  convert_hf_to_gguf.py  convert_hf_to_gguf_update.py  convert_llama_ggml_to_gguf.py  convert_lora_to_gguf.py  fix_changelog.sh  fix_flake8.py  fix_flake8.sh  fix_flake8_2.sh  fix_graph.py  fix_ios_build.sh  fix_neon.patch  fix_prefetch.py  fix_rocm.patch  fix_typecheck.patch  fix_windows_build.sh  patch1.diff  patch2.diff  patch3.diff  patch_changelog.py  patch_docs.diff  patch_py_lint_7.py  patch_quants.sh  patch_script.py  patch_spec_harness.py  patch_speculative.sh  patch_style.py  patch_ty.py  patch_ty_warnings.py  (+42 more)
.devops/: cann.Dockerfile  cpu.Dockerfile  cuda.Dockerfile  intel.Dockerfile  musa.Dockerfile  openvino.Dockerfile  rocm.Dockerfile  s390x.Dockerfile  vulkan.Dockerfile
.jules/: bolt.md
ci/: run.sh
cmake/: triton-aot.cmake  triton_aot_compile.py
common/: arg.cpp  chat-auto-parser-generator.cpp  chat-auto-parser-helpers.cpp  chat-auto-parser.h  chat-diff-analyzer.cpp  chat-peg-parser.cpp  chat-peg-parser.h  chat.cpp  chat.h  common.cpp  common.h  hf-cache.cpp  log.cpp  log.h  ngram-map.cpp  ngram-mod.cpp  ngram-mod.h  phantom.h  sampling.cpp  sampling.h  speculative.cpp  unicode.cpp
docs/: autoparser.md
examples/: CMakeLists.txt  convert_legacy_llama.py
ggml/: CMakeLists.txt
include/: llama.h
rusty/: Cargo.toml
rusty/src/: main.rs
scripts/: compare-llama-bench.py  (+10 more)
(+260 files in other folders)
