[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
regex = "1.10"

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "rusty"
path = "src/main.rs"

[[bin]]
name = "compare_logprobs"
path = "src/bin/compare_logprobs.rs"

[[bin]]
name = "get_chat_template"
path = "src/bin/get_chat_template.rs"
